# estudos-django

./: README.md  pyproject.toml
new_versions/: pyproject.toml
old_versions/: pyproject.toml
old_versions/shorturl/shorturl/: settings.py
old_versions/shorturl/shorturl/accounts/: forms.py  urls.py  views.py
old_versions/shorturl/shorturl/home/: views.py
old_versions/simplemooc/simplemooc/: settings.py
old_versions/simplemooc/simplemooc/accounts/: urls.py
old_versions/simplemooc/simplemooc/core/: urls.py
old_versions/simplemooc/simplemooc/core/static/css/: styles.css
old_versions/simplemooc/simplemooc/core/templates/: home.html
old_versions/simplemooc/simplemooc/courses/: forms.py  models.py  urls.py  views.py
old_versions/simplemooc/simplemooc/courses/migrations/: 0001_initial.py  0003_auto_20190807_1624.py
old_versions/simplemooc/simplemooc/courses/templates/courses/: contact_email.html  details.html
shorturl/shorturl/: settings.py  urls.py
shorturl/shorturl/accounts/templates/accounts/: login.html  register.html
shorturl/shorturl/home/: urls.py
shorturl/shorturl/home/static/css/: style.css
shorturl/shorturl/home/templates/: base_template.html  contact.html  index.html
simplemooc/simplemooc/: settings.py  urls.py
simplemooc/simplemooc/core/: mail.py  urls.py
simplemooc/simplemooc/core/templates/: base.html
simplemooc/simplemooc/courses/: admin.py  forms.py  models.py
simplemooc/simplemooc/courses/migrations/: 0002_auto_20190806_1653.py
