[tool.poetry]
name = "estudos-django"
version = "0.1.0"
description = "Estudo de Django 1 com Python 3"
authors = ["FernandaSzAdr <fsandrade25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "1.8"
Pillow = "^6.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
