[tool.poetry]
name = "estudos-django"
version = "0.1.0"
description = "Projeto de desenvolvimento de um MOOC"
authors = ["FernandaSzAdr <fsandrade25@gmail.com>"]

[tool.poetry.dependencies]
python = "3.5.7"
django = "1.8"

[tool.poetry.dev-dependencies]
Pillow = "^6.1"
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
